--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Gesztenyes Bejgli</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Gesztenyés Bejgli</a>    
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#hozzavalok">Hozzávalók</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#elkeszites">Elkészítés</a>
-              </li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#hozzavalok">Hozzávalók</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#elkeszites">Elkészítés</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+    <div class="container-fluid">
+        <div class="row my-5 px-5">
+            <div class="col-sm-12 col-md-8 col-xl-9 ">
+                <h1 class="text-center">
+                    Gesztenyés Bejgli
+                </h1>
+                <p class="text-center mt-3">
+                    Abban sokan egyet értünk, hogy bejgli nélkül nem telhet el a karácsony, de abban már eltérnek a
+                    vélemények, hogy ki, melyiket favorizálja  persze, mindig vannak listavezetők. A gesztenyés verzió
+                    abszolút a toplista élén van, hiszen a gesztenye már önmagában is egy ünnepi étel
+                    ezért ugyanúgy ott a helye az ünnepi asztalon, mint a diósnak vagy a
+                    mákosnak.
+                </p>
+                <p class="text-center">
+                    Nagyon finom reggelire, ebéd után, délután, uzsonnára, és bármikor, amikor megkívánod.
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 col-xl-3">
+                <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
