--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </nav>
     <div class="container-fluid">
         <div class="row my-5 px-5">
-            <div class="col-sm-12 col-md-8 col-xl-9 ">
+            <div class="col-sm-12 col-md-8 col-lg-8 col-xl-9 ">
                 <h1 class="text-center">
                     Gesztenyés Bejgli
                 </h1>
-                <p class="text-center mt-3">
+                <p id="kezdo" class="text-center mt-3">
                     Abban sokan egyet értünk, hogy bejgli nélkül nem telhet el a karácsony, de abban már eltérnek a
-                    vélemények, hogy ki, melyiket favorizálja  persze, mindig vannak listavezetők. A gesztenyés verzió
+                    vélemények, hogy ki, melyiket favorizálja persze, mindig vannak listavezetők. A gesztenyés verzió
                     abszolút a toplista élén van, hiszen a gesztenye már önmagában is egy ünnepi étel
                     ezért ugyanúgy ott a helye az ünnepi asztalon, mint a diósnak vagy a
                     mákosnak.
@@ -51,8 +51,122 @@
                     Nagyon finom reggelire, ebéd után, délután, uzsonnára, és bármikor, amikor megkívánod.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-4 col-xl-3">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-3">
                 <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
+            </div>
+        </div>
+    <hr>
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-3 px-5">
+                <h2 class="text-center m-3">
+                    Hozzávalók
+                </h2>
+                <p id="megjegyzes" class="text-center">(Egy rúd bejglihez)</p>
+                <h4>
+                    A tésztához:
+                </h4>
+                <ul class="ms-5">
+                    <li>0 dkg liszt</li>
+                    <li>5 dkg vaj</li>
+                    <li>5 dkg porcukor</li>
+                    <li>1 db tojássárgája</li>
+                    <li>1 dkg élesztő</li>
+                    <li>1 mokkás kanál kristálycukor</li>
+                    <li>1 teáskanál rum</li>
+                    <li>1/3 dl tej</li>
+                    <li>1 evőkanál tejföl</li>
+                    <li>1 csipet só</li>
+                </ul>
+                <h4>
+                    A töltelékhez:
+                </h4>
+                <ul class="ms-5">
+                    <li>35 dkg natúr gesztenye massza (cukrozatlan)</li>
+                    <li>10 dkg cukor</li>
+                    <li>1 csomag vaníliás cukor</li>
+                    <li>1 evőkanál rum</li>
+                    <li>2 – 3 evőkanál tej</li>
+                    <li>5 dkg mazsola</li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <div class="row">
+                    <h2 class="m-3">
+                        Elkészítése
+                    </h2>
+                    <p id="megjegyzes" class="px-5">(A hűtést igénylő hozzávalókat kb. egy órával a készítés előtt vedd
+                        ki a hűtőből, hogy szobahőfokra melegedjenek.)</p>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <h4>
+                            A tészta előkészítése:
+                        </h4>
+                        <div class="px-3">
+                            <ol>
+                                <li>A meglangyosított és az 1 mokkáskanál cukorral édesített tejben futtasd fel az
+                                    élesztőt.</li>
+                                <li>Ezalatt keverd össze a por formájú alkotókat.</li>
+                                <li>Készíts mélyedést a közepébe. Ebbe tedd a felhabosodott élesztőt, a tojás sárgáját,
+                                    a rumot és a tejfölt.</li>
+                                <li>Gyúrd össze jól nyújtható tésztává. Ha szükséges, használj több tejfölt.</li>
+                                <li>Pihentesd fél óráig.</li>
+                            </ol>
+                        </div>
+                        <h4>
+                            A gesztenyés töltelék elkészítése:
+                        </h4>
+                        <div class="px-3">
+                            <ol>
+                                <li>A gesztenye masszát egy tálban villával nyomkodd szét. Add hozzá a porcukrot, a
+                                    vaníliás cukrot, a rumot, a tejet és a kinyomkodott mazsolát.</li>
+                                <li>Alaposan dolgozd össze.</li>
+                            </ol>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-8 col-lg-8">
+                        <h4>
+                            A bejgli elkészítése:
+                        </h4>
+                        <ol>
+                            <li>
+                                A tésztát gyúrólapon nyújtófával nyújtsd négyszögletesre. A hossza legyen akkora, amekkora a
+                                sütőhöz tartozó tepsi hossza. Szélessége legyen a hosszúság felénél valamivel nagyobb. Ha
+                                van méretezett gyúrólapod, akkor könnyebb a dolgod.
+                            </li>
+                            <li>
+                                Kend rá a tésztára a tölteléket úgy, hogy körben másfél cm-en ne legyen töltelék.
+                            </li>
+                            <li>
+                                Csavard fel a tésztát hosszanti irányban, kicsit legyen laza, hogy legyen hely a további kelés okozta növekedésnek.
+                            </li>
+                            <li>
+                                Helyezd sütőpapírral kibélelt tepsibe. Ha csak egy rudat sütsz, teheted középre, ha többet,
+                                akkor egyenletesen oszd szét. Tapasztalatom szerint 3 rúd fér el rajta.
+                            </li>
+                            <li>
+                                Kend meg a tetejét tojássárgájával, hagyd száradni 20 percig. Ezt ismételd meg háromszor.
+                            </li>
+                            <li>
+                                Az utolsó kenés után melegítsd elő a sütőt 170 fokon.
+                            </li>
+                            <li>
+                                Szurkáld meg a tészta oldalát és tetejét egy vastagabb tűvel (pl kötőtű), hogy a sütésnél keletkező gőz távozni tudjon.
+                            </li>
+                            <li>
+                                Süsd a tésztát 170 fokon 45 percig. 15 perc után takard le a tetejét alufóliával, mert a
+                                tojás gyorsan pirul, és így nem fog sötétre pirulni. A sütés vége felé nézd meg a felületét,
+                                és ha nagyon világos, akkor vedd le róla az alufóliát. (Ha lehet, vastagabb fóliát használj,
+                                mert azzal úgy tudod letakarni a tésztát, hogy ne érjen hozzá a fólia.) A bejgli akkor van
+                                kész, ha az alja is és a teteje is megpirult. Az aljának kopogósnak kell lennie. Ha ezt
+                                ellenőrizni szeretnéd, kicsit el kell a tésztát fordítanod. Vigyázz, mert forró, használj az
+                                egyik kezeden fogókesztyűt, vagy több rétegű konyharuhát.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
