--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <hr>
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-3 px-5">
-                <h2 class="text-center m-3">
+                <h2 id="hozzavalok" class="text-center m-3">
                     Hozzávalók
                 </h2>
                 <p id="megjegyzes" class="text-center">(Egy rúd bejglihez)</p>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-sm-12 col-md-8 col-lg-9">
                 <div class="row">
-                    <h2 class="m-3">
+                    <h2 id="elkeszites" class="m-3">
                         Elkészítése
                     </h2>
                     <p id="megjegyzes" class="px-5">(A hűtést igénylő hozzávalókat kb. egy órával a készítés előtt vedd
