--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
                     ezért ugyanúgy ott a helye az ünnepi asztalon, mint a diósnak vagy a
                     mákosnak.
                 </p>
-                <p class="text-center">
+                <p id="szoveg" class="text-center">
                     Nagyon finom reggelire, ebéd után, délután, uzsonnára, és bármikor, amikor megkívánod.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-3">
-                <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-3">
+                    <figure >
+                        <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
+                        <figcaption >Gesztenyés Bejgli tálalva</figcaption>
+                    </figure>
+                    <fig></fig>
+                </div> 
             </div>
-        </div>
     <hr>
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-3 px-5">
