--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -40,7 +40,7 @@
                 <h1 class="text-center">
                     Gesztenyés Bejgli
                 </h1>
-                <p id="kezdo" class="text-center mt-3">
+                <p id="kezdo" class="text-center my-5">
                     Abban sokan egyet értünk, hogy bejgli nélkül nem telhet el a karácsony, de abban már eltérnek a
                     vélemények, hogy ki, melyiket favorizálja persze, mindig vannak listavezetők. A gesztenyés verzió
                     abszolút a toplista élén van, hiszen a gesztenye már önmagában is egy ünnepi étel
@@ -51,25 +51,25 @@
                     Nagyon finom reggelire, ebéd után, délután, uzsonnára, és bármikor, amikor megkívánod.
                 </p>
             </div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-3">
-                    <figure >
-                        <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
-                        <figcaption >Gesztenyés Bejgli tálalva</figcaption>
-                    </figure>
-                    <fig></fig>
-                </div> 
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-3">
+                <figure>
+                    <img class="kep img-fluid" src="bejgli.jpg" alt="bejgli" title="bejgli">
+                    <figcaption>Gesztenyés Bejgli tálalva</figcaption>
+                </figure>
+                <fig></fig>
             </div>
-    <hr>
+        </div>
+        <hr>
         <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-3 px-5">
-                <h2 id="hozzavalok" class="text-center m-3">
+            <div class="col-sm-12 col-md-12 col-lg-3 px-5">
+                <h2 id="hozzavalok" class=" p-3">
                     Hozzávalók
                 </h2>
-                <p id="megjegyzes" class="text-center">(Egy rúd bejglihez)</p>
+                <p id="megjegyzes" class="px-5">(Egy rúd bejglihez)</p>
                 <h4>
                     A tésztához:
                 </h4>
-                <ul class="ms-5">
+                <ul class="ps-2">
                     <li>20 dkg liszt</li>
                     <li>5 dkg vaj</li>
                     <li>5 dkg porcukor</li>
@@ -84,7 +84,7 @@
                 <h4>
                     A töltelékhez:
                 </h4>
-                <ul class="ms-5">
+                <ul class="ps-2">
                     <li>35 dkg natúr gesztenye massza (cukrozatlan)</li>
                     <li>10 dkg cukor</li>
                     <li>1 csomag vaníliás cukor</li>
@@ -93,16 +93,16 @@
                     <li>5 dkg mazsola</li>
                 </ul>
             </div>
-            <div class="col-sm-12 col-md-8 col-lg-9">
+            <div class="col-sm-12 col-md-12 col-lg-9">
                 <div class="row">
-                    <h2 id="elkeszites" class="m-3">
+                    <h2 id="elkeszites" class="p-3">
                         Elkészítése
                     </h2>
                     <p id="megjegyzes" class="px-5">(A hűtést igénylő hozzávalókat kb. egy órával a készítés előtt vedd
                         ki a hűtőből, hogy szobahőfokra melegedjenek.)</p>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-12 col-lg-4">
                         <h4>
                             A tészta előkészítése:
                         </h4>
@@ -129,42 +129,52 @@
 
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-8 col-lg-8">
+                    <div class="col-sm-12 col-md-12 col-lg-8">
                         <h4>
                             A bejgli elkészítése:
                         </h4>
                         <ol>
                             <li>
-                                A tésztát gyúrólapon nyújtófával nyújtsd négyszögletesre. A hossza legyen akkora, amekkora a
-                                sütőhöz tartozó tepsi hossza. Szélessége legyen a hosszúság felénél valamivel nagyobb. Ha
+                                A tésztát gyúrólapon nyújtófával nyújtsd négyszögletesre. A hossza legyen akkora,
+                                amekkora a
+                                sütőhöz tartozó tepsi hossza. Szélessége legyen a hosszúság felénél valamivel nagyobb.
+                                Ha
                                 van méretezett gyúrólapod, akkor könnyebb a dolgod.
                             </li>
                             <li>
                                 Kend rá a tésztára a tölteléket úgy, hogy körben másfél cm-en ne legyen töltelék.
                             </li>
                             <li>
-                                Csavard fel a tésztát hosszanti irányban, kicsit legyen laza, hogy legyen hely a további kelés okozta növekedésnek.
+                                Csavard fel a tésztát hosszanti irányban, kicsit legyen laza, hogy legyen hely a további
+                                kelés okozta növekedésnek.
                             </li>
                             <li>
-                                Helyezd sütőpapírral kibélelt tepsibe. Ha csak egy rudat sütsz, teheted középre, ha többet,
+                                Helyezd sütőpapírral kibélelt tepsibe. Ha csak egy rudat sütsz, teheted középre, ha
+                                többet,
                                 akkor egyenletesen oszd szét. Tapasztalatom szerint 3 rúd fér el rajta.
                             </li>
                             <li>
-                                Kend meg a tetejét tojássárgájával, hagyd száradni 20 percig. Ezt ismételd meg háromszor.
+                                Kend meg a tetejét tojássárgájával, hagyd száradni 20 percig. Ezt ismételd meg
+                                háromszor.
                             </li>
                             <li>
                                 Az utolsó kenés után melegítsd elő a sütőt 170 fokon.
                             </li>
                             <li>
-                                Szurkáld meg a tészta oldalát és tetejét egy vastagabb tűvel (pl kötőtű), hogy a sütésnél keletkező gőz távozni tudjon.
+                                Szurkáld meg a tészta oldalát és tetejét egy vastagabb tűvel (pl kötőtű), hogy a
+                                sütésnél keletkező gőz távozni tudjon.
                             </li>
                             <li>
                                 Süsd a tésztát 170 fokon 45 percig. 15 perc után takard le a tetejét alufóliával, mert a
-                                tojás gyorsan pirul, és így nem fog sötétre pirulni. A sütés vége felé nézd meg a felületét,
-                                és ha nagyon világos, akkor vedd le róla az alufóliát. (Ha lehet, vastagabb fóliát használj,
-                                mert azzal úgy tudod letakarni a tésztát, hogy ne érjen hozzá a fólia.) A bejgli akkor van
+                                tojás gyorsan pirul, és így nem fog sötétre pirulni. A sütés vége felé nézd meg a
+                                felületét,
+                                és ha nagyon világos, akkor vedd le róla az alufóliát. (Ha lehet, vastagabb fóliát
+                                használj,
+                                mert azzal úgy tudod letakarni a tésztát, hogy ne érjen hozzá a fólia.) A bejgli akkor
+                                van
                                 kész, ha az alja is és a teteje is megpirult. Az aljának kopogósnak kell lennie. Ha ezt
-                                ellenőrizni szeretnéd, kicsit el kell a tésztát fordítanod. Vigyázz, mert forró, használj az
+                                ellenőrizni szeretnéd, kicsit el kell a tésztát fordítanod. Vigyázz, mert forró,
+                                használj az
                                 egyik kezeden fogókesztyűt, vagy több rétegű konyharuhát.
                             </li>
                         </ol>
@@ -173,6 +183,9 @@
 
             </div>
         </div>
+        <footer class="row d-flex align-items-center">
+            <span class="mx-auto">Készítette: Kovács Ádám | Forrás: <a target="_blank" href="https://www.haztartas-ma.hu/index.php/receptek/sutemenyek/edes-sutemenyek/gesztenyes-bejgli/">haztartas-ma.hu</a></span>
+        </footer>
     </div>
 
 </body>
